--- a/style.css
+++ b/style.css
@@ -10,17 +10,29 @@ header {
 }
 h1 {
   text-align: left;
+  position: relative;
   animation-name: h1-colour;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-direction: alternate-reverse;
 }
 @keyframes h1-colour {
-  from {
-    color: #1e3888;
-  }
-  to {
+  0% {
     color: #9c3848;
+    left: 0%;
+    top: 0%;
+  }
+  25% {
+    color: #1e3888;
+    right: 200px;
+  }
+  50% {
+  }
+  75% {
+  }
+  100% {
+    color: #9c3848;
+    left: 200px;
   }
 }
 button {
@@ -55,8 +67,32 @@ main {
   border-radius: 10px;
   border: solid #9c3848;
 }
+.Toledo {
+  max-width: 40rem;
+  max-height: 20rem;
+  margin-left: 3rem;
+  position: relative;
+  left: 150px;
+  border-radius: 10px;
+  border: solid #9c3848;
+}
 .edu {
   list-style-image: url("./book.png");
+}
+.quiz {
+  background-color: #1e3888;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 2rem;
+  color: #ffad69;
+  border-radius: 5px;
+  position: sticky;
+  bottom: 0;
+}
+.buttonsection {
+  display: flex;
+  justify-content: flex-end;
+  position: sticky;
+  bottom: 0;
 }
 footer {
   background-color: #ffad69;
